--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,6 +11,12 @@
     font-weight: 400;
   }
 
+  .inter-tight-600 {
+    font-family: "Inter Tight", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+  }
+
   .poppins-700 {
     font-family: "Poppins", sans-serif;
     font-weight: 700;
